--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/vue-query": "^5.75.4",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "@vue/typescript-plugin": "^2.2.10",
     "daisyui": "^5.0.35",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
