--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.75.4",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-router-devtools": "^1.119.1",
     "react": "^19.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.119.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
