--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/vue-query": "^5.75.4",
+    "lucide-vue-next": "^0.507.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13"
