--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -14,7 +14,8 @@
     "lucide-vue-next": "^0.507.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
