--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,6 @@ pathspec==0.12.1
 platformdirs==4.3.7
 sqlparse==0.5.3
 pre-commit==4.2.0
-django-filter
+django-filter==25.1
+Django==5.2
+djangorestframework==3.16.0
